# kind-cluster-setup

./: .cspell.json  .env.example  .gitignore  .markdownlint.json  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile.backend  OPEN_SOURCE_PREPARATION.md  PROJECT_ROADMAP.md  README.md  SECURITY.md  TEMPLATE_DEVELOPMENT_GUIDE.md  TEMPLATE_STANDARDS.md  docker-compose.yml  kind_config.example.yaml  metrics-server.yaml  mkdocs.yml  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  markdown-link-check-config.json  release-changelog-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  template_contribution.md
.github/workflows/: ci.yml  code-quality.yml  docs.yml  (+3 more)
.uv/: uv.toml
config/: cluster_config.yaml
data/: .gitkeep
docs/: application_management.md  core_abstractions.md  deployment.md  modularity_improvements.md  template-contribution-guide.md  template-schema.md  ui-guide.md
examples/: cluster_management_example.py  core_abstractions_example.py
kind-setup-frontend/: .dockerignore  .env.example  .env.local.example  .eslintrc.json  .prettierignore  Dockerfile  Dockerfile.prod  README.md  SYNCHRONIZATION_FIXES.md  UPGRADE-NOTES.md  generate-icons.js  jest-setup.d.ts  jest.config.js  jest.setup.js  next.config.js  next.config.mjs  nginx.conf  package-lock.json  package.json  postcss.config.mjs  tailwind.config.js  tailwind.config.ts  tsconfig.json
scripts/: clean_and_create_kind.sh  run_api_server.sh  run_tests.sh  set_resource_limits.sh  setup_uv.sh
tests/: test_cli.py  test_cluster.py  test_commands_comprehensive.py  test_core_abstractions.py  test_delete_app.py  test_deploy_fixes.py  test_kind_cluster_core.py  test_modify.py  test_repositories.py  test_repository_persistence.py
(+238 files in other folders)
